fix about header spacing and scroll speed

--- a/stylesheets/base/about.scss
+++ b/stylesheets/base/about.scss
@@ -3,7 +3,6 @@
   display: flex;
   align-content: center;
   flex-direction: column;
-  justify-content: center;
   background-color: #E1F5FE;
   font-family: 'Rubik', sans-serif;
 
@@ -62,5 +61,6 @@
     font-size: 44px;
     top: 0px;
     margin: 0 auto;
+    margin-top: 50px;
   }
 }
